<resources>
    <string name="app_name">MobileTest2</string>
    <string name="hello_world">ここわれヴぇるわんです</string>
    <string name="action_settings">Settings</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="title_activity_level_one">Level\u0020One</string>
    <string name="title_activity_level_one_quiz">Level\u0020One\u0020Quiz</string>
    <string name="hiragana_button">Hiragana</string>
    <string name="katakana_button">Katakana</string>
    <string name="kanji_button">Kanji</string>
    <string name="vocab_button">Vocabulary\u0020List</string>
    <string name="game_button">Game</string>
    <string name="settings">Settings</string>
    <string name="fonts">Fonts</string>
    <string name="theme">Themes</string>
    <string name="guess_count">Guess\u0020Count</string>
    <string name="title_activity_hangman_game">Hangman</string>
    <string name="title_activity_kanji">Kanji\u0020Activity</string>
    <string name="title_activity_katakana">Katakana</string>
    <string name="title_activity_level_katakana">LevelKatakana</string>
    <string name="title_activity_transition_hiragana">TransitionHiragana</string>
    <string name="title_activity_transition_katakana">TransitionKatakana</string>
    <string name="title_activity_level_kanji2">Multiple choice</string>
    <string name="question_for_quiz">Are you confident to challenge the Quiz?</string>
    <string name="title_activity_transition_kanji">TransitionKanji</string>
    <string name="vocab_list_selection">Select\u0020Vocab\u0020Lists\u0020To\u0020Be\u0020Diplayed</string>
    <string name="vocab_animals">Animals</string>
    <string name="vocab_greetings">Greetings</string>
    <string name="vocab_occupations">Occupations</string>
    <string name="vocab_countries">Countries</string>
    <string name="vocab_languages">Languages</string>
    <string name="vocab_adjectives">Adjectives</string>
    <string name="vocab_verbs">Verbs</string>
    <string name="vocab_adverbs">Adverbs</string>
    <string name="vocab_pronouns">Pronouns</string>
    <string name="vocab_places">Places</string>
    <string name="vocab_list">Vocab\u0020Lists</string>
    <string name="generate_vocab_list_button">Get\u0020Vocab\u0020List</string>
    <string name="choice1">choice1</string>
    <string name="choice2">choice2</string>
    <string name="choice3">choice3</string>
    <string name="choice4">choice4</string>
    <string name="quit_button">Want\u0020to\u0020Quit?</string>
    <string name="play_again_button">Play\u0020Again?</string>
    <string name="title_activity_vocab">VocabActivity</string>
    <string name="check_guess">Check\u0020Guess</string>
    <string-array name="AdjectivesVocab">
        <item>short</item>
        <item>tall</item>
        <item>expensive</item>
        <item>cheap</item>
        <item>happy</item>
        <item>long</item>
    </string-array>
    <string-array name="AdjectivesKanaDefinitions">
        <item>みじかい</item>
        <item>たかい</item>
        <item>たかい</item>
        <item>やすい</item>
        <item>うれしい</item>
        <item>ながい</item>
    </string-array>
    <string-array name="AdjectivesRomajiDefinitions">
        <item>mijikai</item>
        <item>takai</item>
        <item>takai</item>
        <item>yasui</item>
        <item>ureshii</item>
        <item>nagai</item>
    </string-array>
    <string-array name="AdjectivesKanjiDefinitions">
        <item>短い</item>
        <item>高い</item>
        <item>高い</item>
        <item>安い</item>
        <item>嬉しい</item>
        <item>長い</item>
    </string-array>
    <string-array name="AdverbsVocab">
        <item>quickly</item>
        <item>always</item>
        <item>never</item>
        <item>after</item>
        <item>before</item>
        <item>then</item>
    </string-array>
    <string-array name="AdverbsKanaDefinitions">
        <item>すばやく</item>
        <item>いつも</item>
        <item>ぜったいに</item>
        <item>あとで</item>
        <item>まいに</item>
        <item>そして</item>
    </string-array>
    <string-array name="AdverbsRomajiDefinitions">
        <item>subayaku</item>
        <item>itsumo</item>
        <item>zettaini</item>
        <item>atode</item>
        <item>maeni</item>
        <item>soshite</item>
    </string-array>
    <string-array name="AdverbsKanjiDefinitions">
        <item>素早く</item>
        <item>いつも</item>
        <item>絶対に</item>
        <item>後で</item>
        <item>前に</item>
        <item>そして</item>
    </string-array>
    <string-array name="AnimalsVocab">
        <item>dog</item>
        <item>cat</item>
        <item>bird</item>
        <item>fish</item>
        <item>monkey</item>
        <item>horse</item>
        <item>gold fish</item>
        <item>giraffe</item>
        <item>insect</item>
        <item>bee</item>
        <item>otter</item>
        <item>lizard</item>
        <item>gecko</item>
        <item>shark</item>
        <item>dolphin</item>
        <item>shrimp</item>
        <item>crab</item>
        <item>eel</item>
    </string-array>
    <string-array name="AnimalsKanaDefinitions">
        <item>いぬ</item>
        <item>ねこ</item>
        <item>とり</item>
        <item>さかな</item>
        <item>さる</item>
        <item>うま</item>
        <item>きんぎょ</item>
        <item>キリン</item>
        <item>むし</item>
        <item>ハチ</item>
        <item>かわうそ</item>
        <item>トカゲ</item>
        <item>ヤモリ</item>
        <item>サメ</item>
        <item>イルカ</item>
        <item>えび</item>
        <item>かに</item>
        <item>うなぎ</item>
    </string-array>
    <string-array name="AnimalsRomajiDefinitions">
        <item>inu</item>
        <item>neko</item>
        <item>tori</item>
        <item>sakana</item>
        <item>saru</item>
        <item>uma</item>
        <item>kingyo</item>
        <item>kirin</item>
        <item>mushi</item>
        <item>hachi</item>
        <item>kawauso</item>
        <item>tokage</item>
        <item>yamori</item>
        <item>same</item>
        <item>iruka</item>
        <item>ebi</item>
        <item>kani</item>
        <item>unagi</item>
    </string-array>
    <string-array name="AnimalsKanjiDefinitions">
        <item>犬</item>
        <item>猫</item>
        <item>鳥</item>
        <item>魚</item>
        <item>猿</item>
        <item>馬</item>
        <item>金魚</item>
        <item>麒麟</item>
        <item>虫</item>
        <item>蜂</item>
        <item>川獺</item>
        <item>蜥蜴</item>
        <item>守宮</item>
        <item>鮫</item>
        <item>蝦</item>
        <item>海豚</item>
        <item>蟹</item>
        <item>鰻</item>
    </string-array>
    <string-array name="GreetingsVocab">
        <item>Good Morning</item>
        <item>Good Morning(Polite)</item>
        <item>Good Afternoon</item>
        <item>Good Evening</item>
        <item>Goodnight</item>
        <item>Goodbye</item>
        <item>Thanks.</item>
        <item>Thank you. (Polite)</item>
        <item>Excuse me.\ I\'m sorry.</item>
        <item>No. Not at all.</item>
        <item>I\'ll go and return.</item>
        <item>Please go and return.</item>
        <item>I am home.</item>
        <item>Welcome home.</item>
        <item>Thank you for the meal.(before eating)</item>
        <item>THank you for the meal. (after eating)</item>
        <item>Nice to meet you.</item>
    </string-array>
    <string-array name="GreetingsKanaDefinitions">
        <item>おはよう</item>
        <item>おはようございます</item>
        <item>こんにちは</item>
        <item>こんばんは</item>
        <item>おやすみなさい</item>
        <item>さようなら</item>
        <item>どうも</item>
        <item>ありがとうございます</item>
        <item>すみません</item>
        <item>いいえ</item>
        <item>いってきます</item>
        <item>いってらしゃい</item>
        <item>ただいま</item>
        <item>おかえりなさい</item>
        <item>いただきます</item>
        <item>ごちそうさま</item>
        <item>はじめまして</item>
    </string-array>
    <string-array name="GreetingsRomajiDefinitions">
        <item>ohayou</item>
        <item>ohayougozaimasu</item>
        <item>konnichiwa</item>
        <item>konbanwa</item>
        <item>oyasuminasai</item>
        <item>sayounara</item>
        <item>doumo</item>
        <item>arigatougozaimasu</item>
        <item>sumimasen</item>
        <item>iie</item>
        <item>ittekimasu</item>
        <item>itterashai</item>
        <item>tadaima</item>
        <item>okaerinasai</item>
        <item>itadakimasu</item>
        <item>gochisousama</item>
        <item>hajimemashite</item>
    </string-array>
    <string-array name="GreetingsKanjiDefinitions">
        <item>お早う</item>
        <item>お早うございます</item>
        <item>こんにちは</item>
        <item>今晩は</item>
        <item>お休みなさい</item>
        <item>さようなら</item>
        <item>どうも</item>
        <item>ありがとうございます</item>
        <item>すみません</item>
        <item>いいえ</item>
        <item>行ってきます</item>
        <item>いってらしゃい</item>
        <item>ただいま</item>
        <item>お帰りなさい</item>
        <item>いただきます</item>
        <item>ご馳走様</item>
        <item>初めまして</item>
    </string-array>
    <string-array name="CountriesVocab">
        <item>Japan</item>
        <item>China</item>
        <item>Korea</item>
        <item>America</item>
        <item>England</item>
        <item>Germany</item>
    </string-array>
    <string-array name="CountriesKanaDefinitions">
        <item>にほん</item>
        <item>ちゅごく</item>
        <item>かんこく</item>
        <item>アメリカ</item>
        <item>イングランド</item>
        <item>ドイツ</item>
    </string-array>
    <string-array name="CountriesRomajiDefinitions">
        <item>nihon</item>
        <item>chugoku</item>
        <item>kankoku</item>
        <item>amerika</item>
        <item>ingurando</item>
        <item>doitsu</item>
    </string-array>
    <string-array name="CountriesKanjiDefinitions">
        <item>日本</item>
        <item>中国</item>
        <item>韓国</item>
        <item>米国</item>
        <item>英国</item>
        <item>独国</item>
    </string-array>
    <string-array name="LanguagesVocab">
        <item>Japanese</item>
        <item>Korean</item>
        <item>German</item>
        <item>English</item>
        <item>French</item>
        <item>Italian</item>
    </string-array>
    <string-array name="LanguagesKanaDefinitions">
        <item>にほんご</item>
        <item>かんこくご</item>
        <item>ドイツご</item>
        <item>えいご</item>
        <item>フランスご</item>
        <item>イタリアご</item>
    </string-array>
    <string-array name="LanguagesRomajiDefinitions">
        <item>nihongo</item>
        <item>kangokugo</item>
        <item>doitsugo</item>
        <item>eigo</item>
        <item>furansugo</item>
        <item>itariago</item>
    </string-array>
    <string-array name="LanguagesKanjiDefinitions">
        <item>日本語</item>
        <item>韓国語</item>
        <item>ドイツ語</item>
        <item>英語</item>
        <item>フランス語</item>
        <item>イタリア語</item>
    </string-array>
    <string-array name="OccupationsVocab">
        <item>Doctor</item>
        <item>Barber</item>
        <item>Office Worker</item>
        <item>Lawyer</item>
        <item>Teacher</item>
        <item>Professor</item>
    </string-array>
    <string-array name="OccupationsKanaDefinitions">
        <item>いしゃ</item>
        <item>バーバー</item>
        <item>じむいん</item>
        <item>べんごし</item>
        <item>きょうし</item>
        <item>きょうじゅ</item>
    </string-array>
    <string-array name="OccupationsRomajiDefinitions">
        <item>isha</item>
        <item>baabaa</item>
        <item>jimuin</item>
        <item>bengoshi</item>
        <item>kyoushi</item>
        <item>kyoujyu</item>
    </string-array>
    <string-array name="OccupationsKanjiDefinitions">
        <item>医者</item>
        <item>バーバー</item>
        <item>事務員</item>
        <item>弁護士</item>
        <item>教師</item>
        <item>教授</item>
    </string-array>
</resources>