<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    android:background="#2E2E2E"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
    <Button
        android:id="@+id/hiragana_button"
        android:text="@string/hiragana_button"
        android:layout_width="200px"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/katakana_button"
        android:text="@string/katakana_button"
        android:layout_width="200px"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/kanji_button"
        android:text="@string/kanji_button"
        android:layout_width="200px"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/game_button"
        android:text="@string/game_button"
        android:layout_width="200px"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/vocab_button"
        android:text="@string/vocab_button"
        android:layout_width="200px"
        android:layout_height="wrap_content" />
    </LinearLayout>>

    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/title_screen"
        android:scaleType="centerCrop"
        android:layout_centerInParent="true"
        android:src="@drawable/japantitlescreen"
        android:cropToPadding="false" />

</RelativeLayout>
